@startuml
title 22. UML - Observer trong thông báo đơn hàng

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 12
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  FontSize 14
  FontStyle bold
}

class CheckoutFacade {
}

class OrderPlaced <<Subject>> {
}

class SendOrderEmailNotification <<Observer>> {
}

class SendOrderSmsNotification <<Observer>> {
}

CheckoutFacade --> OrderPlaced
OrderPlaced --> SendOrderEmailNotification
OrderPlaced --> SendOrderSmsNotification

@enduml
